--- a/index.html
+++ b/index.html
@@ -31,9 +31,37 @@
 
         </div>
 
+        <div class="introduction">
 
+            <div class="intro-image">
 
+                <img src="" alt="An Image of Me!">
 
+            </div>
 
+            <div class="intro-text">
+
+                <p>Short description of who I am</p>
+
+            </div>
+
+        </div>
+
+        <div class="app-library">
+            <div id="app1">
+                <a href=""><img src='' alt=''></a>
+            </div>
+            <div id="app2">
+                <a href=""><img src='' alt=''></a>
+            </div>
+            <div id="app3">
+                <a href=""><img src='' alt=''></a>
+            </div>
+            <div id="app4">
+                <a href=""><img src='' alt=''></a>
+            </div>
+            <div id="app5">
+                <a href=""><img src='' alt=''></a>
+            </div>
     </body>
 </html>
