--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <head>
 
         <title>Michael DeVito II</title>
-        <link href="css/styles.css" type="text/css" ref="stylesheet">
+        <link href="css/styles.css" type="text/css" rel="stylesheet">
 
+        
     </head>
 
     <body>  
@@ -63,5 +64,21 @@
             <div id="app5">
                 <a href=""><img src='' alt=''></a>
             </div>
+        </div>
+
+        <div class="sidebar">
+
+            <div id="featured-project">
+
+                <div id="project-image">
+                    <img src="" alt="">
+                </div>
+                <div id="project-description">
+                    <p>This is the description for the featured project.</p>
+                </div>
+
+            </div>
+        </div>
+
     </body>
 </html>
