--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
         <div class="header">
 
-            <div class="name_header">
+            <div id="name_header">
 
                 <a href="index.html">Michael DeVito II</a>
                 
             </div>
 
-            <div class="icons_header">
+            <div id="icons_header">
 
                 <a href="index.html">Home</a>
                 <a href="about_me.html">About Me</a>
@@ -34,13 +34,13 @@
 
         <div class="introduction">
 
-            <div class="intro-image">
+            <div id="intro_image">
 
-                <img src="" alt="An Image of Me!">
+                <img src="media/temp_box.jpg" alt="An Image of Me!">
 
             </div>
 
-            <div class="intro-text">
+            <div id="intro_text">
 
                 <p>Short description of who I am</p>
 
@@ -48,32 +48,32 @@
 
         </div>
 
-        <div class="app-library">
-            <div id="app1">
+        <div class="app_library">
+            <div id="app">
                 <a href=""><img src='' alt=''></a>
             </div>
-            <div id="app2">
+            <div id="app">
                 <a href=""><img src='' alt=''></a>
             </div>
-            <div id="app3">
+            <div id="app">
                 <a href=""><img src='' alt=''></a>
             </div>
-            <div id="app4">
+            <div id="app">
                 <a href=""><img src='' alt=''></a>
             </div>
-            <div id="app5">
+            <div id="app">
                 <a href=""><img src='' alt=''></a>
             </div>
         </div>
 
         <div class="sidebar">
 
-            <div id="featured-project">
+            <div id="featured_project">
 
-                <div id="project-image">
+                <div id="project_image">
                     <img src="" alt="">
                 </div>
-                <div id="project-description">
+                <div id="project_description">
                     <p>This is the description for the featured project.</p>
                 </div>
 
