--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
                     <div class="intro_text">
 
                         <h1 id="poppins-font">Hello, I'm Michael!</h1>
-                        <p id="roboto-font">I'm a Cybersecurity student at Messiah University, with a love for computers and blueteaming. Welcome to my website!</p>
+                        <p id="roboto-font">
+                            I'm a first-year (Junior by credit) at Messiah University, where I am majoring in Cybersecurity and minoring in Web Development.
+                            I've loved all things computers ever since I troubleshooted my friends' laptops in my middle school. I'm looking forward to 
+                            expanding my knowledge in all things Cybersecurity through internships and career opportunities.
+                            Welcome to my website!</p>
 
                     </div>
 
@@ -68,11 +72,15 @@
                     <div class="featured_project">
     
                         <div class="project_image">
+                            <h2 id="poppins-font">What am I up to?</h2>
                             <img src="" alt="">
                         </div>
-                        <div class="project_description">
-                            <h2 id="poppins-font">Project 1</h2>
-                            <p id="roboto-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
+                        <div class="project_description">                            
+                            <h3 id="poppins-font">Project Showcase</h3>
+                            <p id="roboto-font">
+                                What better project to show off than a website designed entirely by myself? I programmed all of the HTML/CSS for this website as part of a project for CIS 291.
+                                I logged my development proceess by using GitHub, and I overall loved this project! I'm looking forward to improving this website and potentially hosting it myself!
+                            </p>
                         </div>
     
                     </div>
@@ -92,6 +100,9 @@
                 </div>
 
             </div>
+            <footer id="roboto-font">
+                <p>Background by <a href="https://unsplash.com/@weirick?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Jake Weirick</a> on <a href="https://unsplash.com/photos/the-night-sky-is-filled-with-stars-Q_RBVFFXR_g?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+            </footer>
         </div>
     </body>
 </html>
