initialize about-me-work

--- a/index.html
+++ b/index.html
@@ -4,41 +4,32 @@
 <html lang='en'>
     <head>
 
-        <!-- Metas! -->
+        <!-- Meta for the character set -->
         <meta charset="utf-8">
 
-        <title>Michael DeVito II - Personal Website</title>
+        <!-- Title and linking external CSS -->
+        <title>MDeVito - Home</title>
         <link href="css/styles.css" type="text/css" rel="stylesheet">
         
-        <!-- Linking cool fonts I found from Google -->
+        <!-- Linking cool fonts I found from Google (code from Google) -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+   
 
-        <!-- Initializing those cool fonts -->
-        <style>
-            .poppins-font {
-                font-family: Poppins;
-                color: white;
-            }
-            .roboto-font {
-                font-family: Roboto;
-                color: white;
-            }
-        </style>
     </head>
     <body>  
         <div class="container">
             <div class="header">
 
                 <div class="name_header">
-                    <a href="index.html" class="poppins-font">Michael DeVito II</a>
+                    <a href="index.html" title="Back to Homepage" class="poppins-font">Michael DeVito II</a>
                 </div>
 
                 <div class="icons_header">
                     <nav>
-                        <a href="index.html" class="poppins-font">Home</a>
-                        <a href="index.html" class="poppins-font">About</a>
+                        <a href="index.html" class="poppins-font" id="current">Home</a>
+                        <a href="about.html" class="poppins-font">About</a>
                         <a href="index.html" class="poppins-font">Projects</a>
                         <a href="index.html" class="poppins-font">Resources</a>
                         <a href="index.html" class="poppins-font">Contact</a>
@@ -51,7 +42,7 @@
                 <div class="introduction">
 
                     <div class="intro_image">
-                        <img src="media/logo.png" alt="An Image of Me!">
+                        <img src="media/home/logo.png" alt="An Image of Me!">
                     </div>
 
                     <div class="intro_text">
@@ -63,8 +54,8 @@
                             I'm looking forward to expanding my knowledge in all things I.T. through internships and career opportunities.
                             Welcome to my website!
                         </p>
-                        <a target="_blank" title="My Resume (Google Docs)" href="https://docs.google.com/document/d/1xSc2x2CWN-lR5VXWSntXrKEh7dwot7et0KhHShWjwTQ/edit?usp=sharing"><img src="media/resume.png" alt="Resume"></a>
-                        <a id="linkedin" target="_blank" title="My LinkedIn" href="https://www.linkedin.com/in/michael-devito-ii/"><img src="media/linkedin.png" alt="LinkedIn"></a>
+                        <a target="_blank" title="My Resume (Google Docs)" href="https://docs.google.com/document/d/1xSc2x2CWN-lR5VXWSntXrKEh7dwot7et0KhHShWjwTQ/edit?usp=sharing"><img src="media/home/resume.png" alt="Resume"></a>
+                        <a id="linkedin" target="_blank" title="My LinkedIn" href="https://www.linkedin.com/in/michael-devito-ii/"><img src="media/home/linkedin.png" alt="LinkedIn"></a>
                     </div>
 
                 </div>
@@ -75,7 +66,7 @@
     
                         <div class="project_image">
                             <h2 class="poppins-font">What am I up to?</h2>
-                            <img src="media/project.png" alt="An Image of my Website!">
+                            <img src="media/home/project.png" alt="An Image of my Website!">
                         </div>
 
                         <div class="project_description">                            
