--- a/about.html
+++ b/about.html
@@ -30,15 +30,15 @@
                 <div class="icons_header">
                     <nav>
                         <a href="index.html" class="poppins-font">Home</a>
-                        <a href="index.html" class="poppins-font" id="current">About</a>
-                        <a href="index.html" class="poppins-font">Projects</a>
-                        <a href="index.html" class="poppins-font">Resources</a>
-                        <a href="index.html" class="poppins-font">Contact</a>
+                        <a href="about.html" class="poppins-font" id="current">About</a>
+                        <a href="projects.html" class="poppins-font">Projects</a>
+                        <a href="resources.html" class="poppins-font">Resources</a>
+                        <a href="contact.html" class="poppins-font">Contact</a>
                     </nav>
                 </div>
 
             </div>
-            <div class="main-content">
+            <div class="main_content">
 
                 <div class="about_me">
 
