--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                     <nav>
                         <a href="index.html" class="poppins-font" id="current">Home</a>
                         <a href="about.html" class="poppins-font">About</a>
-                        <a href="index.html" class="poppins-font">Projects</a>
-                        <a href="index.html" class="poppins-font">Resources</a>
-                        <a href="index.html" class="poppins-font">Contact</a>
+                        <a href="projects.html" class="poppins-font">Projects</a>
+                        <a href="resources.html" class="poppins-font">Resources</a>
+                        <a href="contact.html" class="poppins-font">Contact</a>
                     </nav>
                 </div>
 
             </div>
-            <div class="main-content">
+            <div class="main_content">
 
                 <div class="introduction">
 
