--- a/projects.html
+++ b/projects.html
@@ -30,8 +30,8 @@
                 <div class="icons_header">
                     <nav>
                         <a href="index.html" class="poppins-font">Home</a>
-                        <a href="about.html" class="poppins-font" id="current">About</a>
-                        <a href="projects.html" class="poppins-font">Projects</a>
+                        <a href="about.html" class="poppins-font">About</a>
+                        <a href="projects.html" class="poppins-font" id="current">Projects</a>
                         <a href="resources.html" class="poppins-font">Resources</a>
                         <a href="contact.html" class="poppins-font">Contact</a>
                     </nav>
