--- a/about.html
+++ b/about.html
@@ -21,6 +21,9 @@
     </head>
     <body>  
         <div class="container">
+
+            <div class="header_background"><img src="media/background.png" alt="Background"></div>
+
             <div class="header">
 
                 <div class="name_header">
@@ -32,7 +35,7 @@
                         <a href="index.html" class="poppins-font">Home</a>
                         <a href="about.html" class="poppins-font" id="current">About</a>
                         <a href="projects.html" class="poppins-font">Projects</a>
-                        <a href="resources.html" class="poppins-font">Resources</a>
+                        <a href="experience.html" class="poppins-font">Experience</a>
                         <a href="contact.html" class="poppins-font">Contact</a>
                     </nav>
                 </div>
@@ -54,20 +57,22 @@
                         <h1 class="poppins-font">Hello, World!</h1>
 
                         <p class="roboto-font">
-                            &emsp; Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            &emsp; This is where I shall discuss my experience with java 
+                            This is where I shall discuss my experience with java
+                            This is where I shall discuss my experience with java
+                            This is where I shall discuss my experience with java
+                            This is where I shall discuss my experience with java
                             <br><br>
-                            &emsp; Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            &emsp; This is where I shall discuss my experience with java
+                            This is where I shall discuss my experience with java
+                            This is where I shall discuss my experience with java
+                            This is where I shall discuss my experience with java
                             <br><br>
-                            &emsp; Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            &emsp; This is where I shall discuss my experience with java
+                            This is where I shall discuss my experience with java
+                            This is where I shall discuss my experience with java
+                            This is where I shall discuss my experience with java
+                            
                         </p>
 
                     </div>
