--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     </head>
     <body>  
         <div class="container">
+
+            <div class="header_background"><img src="media/background.png" alt="Background"></div>
+
             <div class="header">
 
                 <div class="name_header">
@@ -31,7 +34,7 @@
                         <a href="index.html" class="poppins-font" id="current">Home</a>
                         <a href="about.html" class="poppins-font">About</a>
                         <a href="projects.html" class="poppins-font">Projects</a>
-                        <a href="resources.html" class="poppins-font">Resources</a>
+                        <a href="experience.html" class="poppins-font">Experience</a>
                         <a href="contact.html" class="poppins-font">Contact</a>
                     </nav>
                 </div>
