--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
 
         <!-- Title and linking external CSS -->
-        <title>MDevito - About Me</title>
+        <title>MDevito - Projects</title>
         <link href="css/styles.css" type="text/css" rel="stylesheet">
         <link href="css/projects_styles.css" type="text/css" rel="stylesheet">
         
@@ -21,6 +21,11 @@
     </head>
     <body>  
         <div class="container">
+
+            <div class="header_background">
+                <img src="media/background.png" alt="Background">
+            </div>
+
             <div class="header">
 
                 <div class="name_header">
@@ -32,7 +37,7 @@
                         <a href="index.html" class="poppins-font">Home</a>
                         <a href="about.html" class="poppins-font">About</a>
                         <a href="projects.html" class="poppins-font" id="current">Projects</a>
-                        <a href="resources.html" class="poppins-font">Resources</a>
+                        <a href="experience.html" class="poppins-font">Experience</a>
                         <a href="contact.html" class="poppins-font">Contact</a>
                     </nav>
                 </div>
@@ -42,6 +47,8 @@
                 </div>
 
             </div>
+
+
             <div class="main_content">
 
                 <div class="project_intro">
