--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
    
+        <!-- Additional CSS -->
+        <style>
+            button {
+                background-image: url(media/background.png);
+                border: none;
+            }
+        </style>
 
     </head>
     <body>  
@@ -92,11 +99,11 @@
 
                         <h2 class="poppins-font">App Library</h2>
                         <nav>
-                            <a class="buttonJava" href="">Java</a>
-                            <a class="buttonPython" href="">Python</a>
-                            <a class="buttonHTML" href="">HTML</a>
-                            <a class="buttonCSS" href="">CSS</a>
-                            <a class="buttonSQL" href="">MySQL</a>
+                            <a class="buttonJava" href="experience.html#java">Java</a>
+                            <a class="buttonPython" href="experience.html#python">Python</a>
+                            <a class="buttonHTML" href="experience.html#html/css">HTML</a>
+                            <a class="buttonCSS" href="experience.html#html/css">CSS</a>
+                            <a class="buttonSQL" href="experience.html#mysql">MySQL</a>
                         </nav>
 
                     </div>
@@ -104,6 +111,8 @@
                 </div>
 
             </div>
+
+            <a href="secret.html"><button></button></a>
 
             <footer class="roboto-font">
                 <p>Background by <a title="Jake Weirick on Unsplash" href="https://unsplash.com/@weirick?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Jake Weirick</a> on <a title="Unsplash" href="https://unsplash.com/photos/the-night-sky-is-filled-with-stars-Q_RBVFFXR_g?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
