--- a/projects.html
+++ b/projects.html
@@ -67,11 +67,9 @@
                         <div class="project_description">                            
                             <h3 class="poppins-font">Java Program with Real-World Applications</h3>
                             <p class="roboto-font">
-                                What better project to show off than a website designed entirely by myself? I programmed all of the HTML/CSS for this website as part of a project for CIS 291.
-                                I logged my development process using GitHub, and I also utilized Copilot for help with hexadecimal values (I'm still bad at those). Overall, I loved this project!
-                                I'm looking forward to improving this website and potentially hosting it myself!
+                                What do I do when I find myself stumped while making a floor plan at my job? Make a Java program to help me! This program, once it is complete, will store all my employees, their preferred or best positions, and their hours of work during shifts I lead. Then, the program will create a floor plan based on the number of employees I have on clock, the number of positions that need to be filled for the hour, and how busy our previous hours have been. This program is a personal project that stemmed from my Programming II course, where I am learning the aspects of Object-Oriented Programming in Java.
                             </p>
-                            <a target="_blank" title="Personal Website Repository" href="https://github.com/mdevitoii/Personal-Website"><p class="roboto-font" style="color: #6e9bd4;">View the Repository Here</p></a>
+                            <a target="_blank" title="Schedule Manager Repository" href="https://github.com/mdevitoii/schedule-manager"><p class="roboto-font" style="color: #6e9bd4;">View the Repository Here</p></a>
                         </div>
 
                     </div>
@@ -86,9 +84,7 @@
                         <div class="project_description">                            
                             <h3 class="poppins-font">First Cybersecurity Competition</h3>
                             <p class="roboto-font">
-                                What better project to show off than a website designed entirely by myself? I programmed all of the HTML/CSS for this website as part of a project for CIS 291.
-                                I logged my development process using GitHub, and I also utilized Copilot for help with hexadecimal values (I'm still bad at those). Overall, I loved this project!
-                                I'm looking forward to improving this website and potentially hosting it myself!
+                                Recently, I was blessed with the opportunity to join my teammates in competing at the Mid-Atlantic Collegiate Cyber Defense Competition! This event was hosted on University of Maryland’s College Park campus, and despite being an alternate, I had an amazing time networking and cheering on my team. We didn’t qualify to move on to the national CCDC competition, but we congratulated our friends at Liberty University who placed third, just behind University of Virginia and Penn State. This was an amazing experience, and I can’t wait until next year!
                             </p>
                             <a target="_blank" title="LinkedIn Post" href="https://www.linkedin.com/posts/michael-devito-ii_on-january-18th-messiah-universitys-ccdc-activity-7289151465179250689-38BN?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEh1rYsBvgVSnqjxkog0nDVZ74DANQs84BE"><p class="roboto-font" style="color: #6e9bd4;">Read more on LinkedIn</p></a>
                         </div>
@@ -105,9 +101,7 @@
                         <div class="project_description">                            
                             <h3 class="poppins-font">Self-Hosted Wikipedia?!</h3>
                             <p class="roboto-font">
-                                What better project to show off than a website designed entirely by myself? I programmed all of the HTML/CSS for this website as part of a project for CIS 291.
-                                I logged my development process using GitHub, and I also utilized Copilot for help with hexadecimal values (I'm still bad at those). Overall, I loved this project!
-                                I'm looking forward to improving this website and potentially hosting it myself!
+                                I've been hard at work with my home lab for the past few months. After installing two new 2TB drives for media storage, I was stumped on what I should focus on next. Of course, I still needed to use PhotoPrism to organize family photos for Plex, but I wanted a new challenge. That’s when I stumbled upon a video tutorial for setting up Kiwix, which can be used to self-host your own instance of any wiki, including the infamous Wikipedia! Who knew that the entirety of human knowledge, hosted on a massive platform like Wikipedia in English, would only be about 90GB in size? I decided to self-host my own instance of Wikipedia to show my competency with Docker, as well as to show off what a home server can do!
                             </p>
                             <a target="_blank" title="Kiwix Website" href="https://kiwix.org/en/"><p class="roboto-font" style="color: #6e9bd4;">Visit Kiwix's Website</p></a>
                         </div>
