Implementing Blog Page

--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
                     <nav>
                         <a href="index.html" class="poppins-font">Home</a>
                         <a href="about.html" class="poppins-font" id="current">About</a>
+                        <a href="blog.html" class="poppins-font">Blog</a>
                         <a href="projects.html" class="poppins-font">Projects</a>
                         <a href="experience.html" class="poppins-font">Experience</a>
                         <a href="contact.html" class="poppins-font">Contact</a>
