--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,7 @@
                     <nav>
                         <a href="index.html" class="poppins-font">Home</a>
                         <a href="about.html" class="poppins-font">About</a>
+                        <a href="blog.html" class="poppins-font">Blog</a>
                         <a href="projects.html" class="poppins-font" id="current">Projects</a>
                         <a href="experience.html" class="poppins-font">Experience</a>
                         <a href="contact.html" class="poppins-font">Contact</a>
