--- a/secret.html
+++ b/secret.html
@@ -10,6 +10,7 @@
         <!-- Title and linking external CSS -->
         <title>MDevito - About Me</title>
         <link href="css/styles.css" type="text/css" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
         
         <!-- Linking cool fonts I found from Google (code from Google) -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
