--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
         <title>MDevito - About Me</title>
         <link href="css/styles.css" type="text/css" rel="stylesheet">
         <link href="css/about_styles.css" type="text/css" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
         
         <!-- Linking cool fonts I found from Google (code from Google) -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
