--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
         <title>MDeVito - Contact</title>
         <link href="css/styles.css" type="text/css" rel="stylesheet">
         <link href="css/contact_styles.css" type="text/css" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
 
         <!-- Linking cool fonts I found from Google (code from Google) -->
