--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
         <!-- Meta for the character set -->
         <meta charset="utf-8">
 
-        <!-- Title and linking external CSS -->
+        <!-- Title, External CSS, and Favicon -->
         <title>MDeVito - Home</title>
         <link href="css/styles.css" type="text/css" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
         
         <!-- Linking cool fonts I found from Google (code from Google) -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
